Dodanie CarController i możliwość wyświetlania wszystkich samochodów.

--- a/src/main/resources/templates/car/list.html
+++ b/src/main/resources/templates/car/list.html
@@ -11,6 +11,7 @@
         <th>Model</th>
     </tr>
     <tr th:each="car: ${cars}">
+        <td th:text="${car.id}"></td>
         <td th:text="${car.brand}"></td>
         <td th:text="${car.model}"></td>
     </tr>
