odświeżenie Client i dodoanie Client-list

--- a/src/main/resources/templates/car/car-list.html
+++ b/src/main/resources/templates/car/car-list.html
@@ -7,7 +7,7 @@
 <body>
 <table>
     <tr>
-        <th>Make</th>
+        <th>Brand </th>
         <th>Model</th>
     </tr>
     <tr th:each="car: ${cars}">
