odświeżenie Client i dodoanie Client-list

--- a/src/main/resources/templates/client/result.html
+++ b/src/main/resources/templates/client/result.html
@@ -10,6 +10,6 @@ Surname <strong th:text="${client.surname}"></strong>
 Email: <strong th:text="${client.email}"></strong>
 Address: <strong th:text="${client.address}"></strong>
 <br>
-<a th:href="@{/client/client-list.html}">Clients list</a>
+<a th:href="@{/client/client-list}">Clients list</a>
 </body>
 </html>
