--- a/src/main/resources/templates/client/client-list.html
+++ b/src/main/resources/templates/client/client-list.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>List of Clients</title>
+    <meta charset="ISO-8859-1">
+    <title>Client-list</title>
+
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
+
 </head>
 <body>
-<table>
-    <tr>
-        <th>Name</th>
-        <th>Surname</th>
-        <th>Email</th>
-        <th>address</th>
-    </tr>
-    <tr th:each="client: ${clients}">
-        <td th:text="${client.id}"></td>
-        <td th:text="${client.name}"></td>
-        <td th:text="${client.surname}"></td>
-        <td th:text="${client.email}"></td>
-        <td th:text="${client.address}"></td>
-    </tr>
-</table>
+
+<div class="container my-2">
+    <h1>Client List</h1>
+
+    <a th:href = "@{/client/showAddClientForm}" class="btn btn-primary btn-sm mb-3"> Add Client </a>
+
+    <table class = "table table-striped table-responsive-md">
+        <thead>
+        <tr>
+            <th>Client First Name</th>
+            <th>Client Last Name</th>
+            <th>Client Email</th>
+            <th>Client Address</th>
+            <th> Actions </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="client : ${listClients}">
+            <td th:text="${client.name}"></td>
+            <td th:text="${client.surname}"></td>
+            <td th:text="${client.email}"></td>
+            <td th:text="${client.address}"></td>
+            <td> <a th:href="@{'/client/showClientUpdateForm/' + ${client.id}}" class="btn btn-primary">Update</a>
+                <a th:href="@{'/client/deleteClient/' + ${client.id}}" class="btn btn-danger">Delete</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
