--- a/src/main/resources/templates/employee/employee-list.html
+++ b/src/main/resources/templates/employee/employee-list.html
@@ -16,6 +16,7 @@
     <h1>Employees List</h1>
 
     <a th:href = "@{/employee/showAddEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee </a>
+    <a th:href = "@{/booking/viewBookingForm}" class="btn btn-danger btn-sm mb-3"> Book Car </a>
 
     <table border="1" class = "table table-striped table-responsive-md">
         <thead>
