Dodanie możliwości rezerwacji

--- a/src/main/resources/templates/booking/booking-add-form.html
+++ b/src/main/resources/templates/booking/booking-add-form.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -32,7 +32,7 @@
         <select select class="form-select" aria-label="Default select example" th:field="*{client}">
             <option th:each="client: ${client}" th:value="${client.id}" th:text="${client.getFullName}"></option>
         </select>
-
+        <br>
         <select select class="form-select" aria-label="Default select example" th:field="*{car}">
             <option th:each="car: ${car}" th:value="${car.id}" th:text="${car.brand}"></option>
         </select>
