--- a/src/main/resources/templates/booking/booking-list.html
+++ b/src/main/resources/templates/booking/booking-list.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -8,29 +13,25 @@
 <div class="container my-2">
     <h1>Employees List</h1>
 
-    <a th:href = "@{/employee/showAddEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee </a>
-    <a th:href = "@{/booking/viewBookingForm}" class="btn btn-danger btn-sm mb-3"> Book Car </a>
+    <a th:href = "@{/employee/employee-list}" class="btn btn-danger btn-sm mb-3"> Back to Employee View </a>
 
     <table border="1" class = "table table-striped table-responsive-md">
         <thead>
         <tr>
-            <th> Employee First Name</th>
-            <th>Employee Last Name</th>
-            <th>Employee Position</th>
-            <th>Employee Branch</th>
-            <th> Actions </th>
+            <th> Booking Day</th>
+            <th> Start </th>
+            <th> End </th>
+            <th> Branch</th>
+            <th> Price </th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee : ${listEmployees}">
-            <td th:text="${employee.firstName}"></td>
-            <td th:text="${employee.lastName}"></td>
-            <td th:text="${employee.position}"></td>
-            <td th:text="${employee.branch}"></td>
-            <td> <a th:href="@{/employee/showEmployeeUpdateForm/{id}(id=${employee.id})}" class="btn btn-primary">Update</a>
-                <!--                <a th:href="@{/employee/deleteEmployee/{id}(id=${employee.id})}" class="btn btn-danger">Delete</a>-->
-                <a th:href="@{'/employee/deleteEmployee/' + ${employee.id}}" class="btn btn-danger">Delete</a>
-            </td>
+        <tr th:each="booking : ${list}">
+            <td th:text="${booking.bookingDay}"></td>
+            <td th:text="${booking.start}"></td>
+            <td th:text="${booking.end}"></td>
+            <td th:text="${booking.branch}"></td>
+            <td th:text="${booking.price}"></td>
         </tr>
         </tbody>
     </table>
