Dodanie index.html. Próbna strona główna

--- a/src/main/resources/templates/employee/employee-list.html
+++ b/src/main/resources/templates/employee/employee-list.html
@@ -17,6 +17,7 @@
 
     <a th:href = "@{/employee/showAddEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee </a>
     <a th:href = "@{/booking/viewBookingForm}" class="btn btn-danger btn-sm mb-3"> Book Car </a>
+    <a th:href="@{/index}" class="btn btn-primary btn-sm mb-3"> Home </a>
 
     <table border="1" class = "table table-striped table-responsive-md">
         <thead>
