--- a/src/main/resources/templates/car/car-list.html
+++ b/src/main/resources/templates/car/car-list.html
@@ -12,6 +12,7 @@
 <div class="container my-2">
     <h1>Cars List</h1>
     <a th:href = "@{/car/showAddCarForm}" class="btn btn-primary btn-sm mb-3"> Add Car </a>
+    <a th:href="@{/index}" class="btn btn-primary btn-sm mb-3"> Home </a>
 <table border="1" class = "table table-striped table-responsive-md">
     <thead>
     <tr>
