--- a/src/main/resources/templates/client/client-list.html
+++ b/src/main/resources/templates/client/client-list.html
@@ -16,7 +16,7 @@
     <h1>Client List</h1>
 
     <a th:href = "@{/client/showAddClientForm}" class="btn btn-primary btn-sm mb-3"> Add Client </a>
-
+    <a th:href="@{/index}" class="btn btn-primary btn-sm mb-3"> Home </a>
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
