--- a/src/main/resources/templates/booking/booking-add-form.html
+++ b/src/main/resources/templates/booking/booking-add-form.html
@@ -41,7 +41,7 @@
         </select>
 
 
-        <button type="submit" class="btn btn-info col-2"> Save Employee</button>
+        <button type="submit" class="btn btn-info col-2"> Save Booking</button>
     </form>
 
     <hr>
