--- a/src/main/resources/templates/car/car-add-form.html
+++ b/src/main/resources/templates/car/car-add-form.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Car-add-form</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
+    <th:block th:replace="fragments/general.html :: head-tags"></th:block>
 </head>
 <body>
 <div class="container">
