--- a/src/main/resources/templates/car/car-list.html
+++ b/src/main/resources/templates/car/car-list.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Car-list</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
+    <th:block th:replace="fragments/general.html :: head-tags"></th:block>
 </head>
 <body>
 <div class="container my-2">
     <h1>Cars List</h1>
     <a th:href = "@{/car/showAddCarForm}" class="btn btn-primary btn-sm mb-3"> Add Car </a>
-    <a th:href="@{/index}" class="btn btn-primary btn-sm mb-3"> Home </a>
+    <a th:href="@{/}" class="btn btn-primary btn-sm mb-3"> Home </a>
 <table border="1" class = "table table-striped table-responsive-md">
     <thead>
     <tr>
