--- a/src/main/resources/templates/client/client-list.html
+++ b/src/main/resources/templates/client/client-list.html
@@ -4,10 +4,7 @@
     <meta charset="ISO-8859-1">
     <title>Client-list</title>
 
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
+    <th:block th:replace="fragments/general.html :: head-tags"></th:block>
 
 </head>
 <body>
@@ -16,7 +13,7 @@
     <h1>Client List</h1>
 
     <a th:href = "@{/client/showAddClientForm}" class="btn btn-primary btn-sm mb-3"> Add Client </a>
-    <a th:href="@{/index}" class="btn btn-primary btn-sm mb-3"> Home </a>
+    <a th:href="@{/}" class="btn btn-primary btn-sm mb-3"> Home </a>
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
