--- a/src/main/resources/templates/employee/employee-list.html
+++ b/src/main/resources/templates/employee/employee-list.html
@@ -4,11 +4,7 @@
     <meta charset="ISO-8859-1">
     <title>Employee-list</title>
 
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
-
+    <th:block th:replace="fragments/general.html :: head-tags"></th:block>
 </head>
 <body>
 
@@ -17,7 +13,7 @@
 
     <a th:href = "@{/employee/showAddEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee </a>
     <a th:href = "@{/booking/viewBookingForm}" class="btn btn-danger btn-sm mb-3"> Book Car </a>
-    <a th:href="@{/index}" class="btn btn-primary btn-sm mb-3"> Home </a>
+    <a th:href="@{/}" class="btn btn-primary btn-sm mb-3"> Home </a>
 
     <table border="1" class = "table table-striped table-responsive-md">
         <thead>
