--- a/src/main/resources/templates/employee/employee-update-form.html
+++ b/src/main/resources/templates/employee/employee-update-form.html
@@ -4,8 +4,7 @@
   <meta charset="ISO-8859-1">
   <title>Employee-update-form</title>
 
-  <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <th:block th:replace="fragments/general.html :: head-tags"></th:block>
 </head>
 <body>
 <div class="container">
