--- a/src/main/resources/templates/car/car-list.html
+++ b/src/main/resources/templates/car/car-list.html
@@ -16,6 +16,7 @@
         <th>Car Brand </th>
         <th> Car Model</th>
         <th> Car Body Type</th>
+<th> Car Color</th>
         <th> Car Vintage</th>
         <th> Car Mileage</th>
         <th> Car Status</th>
@@ -28,6 +29,7 @@
         <td th:text="${car.brand}"></td>
         <td th:text="${car.model}"></td>
         <td th:text="${car.bodyType}"></td>
+        <td th:text="${car.color}"></td>
         <td th:text="${car.vintage}"></td>
         <td th:text="${car.mileage}"></td>
         <td th:text="${car.status}"></td>
