--- a/src/main/resources/templates/car/car-update-form.html
+++ b/src/main/resources/templates/car/car-update-form.html
@@ -23,6 +23,8 @@
 
         <input type="text" th:field="*{bodyType}" class="form-control mb-4 col-4">
 
+        <input type="text" th:field="*{color}" class="form-control mb-4 col-4">
+
         <input type="text" th:field="*{vintage}" class="form-control mb-4 col-4">
 
         <input type="text" th:field="*{mileage}" class="form-control mb-4 col-4">
