--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Fragments</title>
@@ -18,14 +18,15 @@
 <body>
 <nav th:fragment="my-navigation" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand  text-danger " >Car Rental</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand  text-danger ">Car Rental</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" th:href = "@{/client/client-list}">Clients</a>
+                    <a class="nav-link" th:href="@{/client/client-list}">Clients</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/employee/employee-list}">Employee</a>
@@ -47,20 +48,22 @@
                     <a th:href="@{/user/register}" class="btn btn-outline-success">Zarejestruj</a>
                 </form>
 
-                <div sec:authorize="isAuthenticated()" class="d-flex align-items-center">
-                    <div class="me-2">Zalogowano jako: <strong sec:authentication="name"></strong></div>
-                    <form method="post" th:action="@{/logout}">
-                        <input type="submit" value="Wyloguj" class="btn btn-outline-primary">
-                    </form>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <div sec:authorize="isAuthenticated()" class="d-flex align-items-center">
+                <div class="me-2">Zalogowano jako: <strong sec:authentication="name"></strong></div>
+                <form method="post" th:action="@{/logout}">
+                    <input type="submit" value="Wyloguj" class="btn btn-outline-primary">
+                </form>
 
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+
+            </div>
         </div>
     </div>
 </nav>
-<div
+
 </body>
 </html>
