--- a/src/main/resources/templates/booking/booking-list.html
+++ b/src/main/resources/templates/booking/booking-list.html
@@ -9,7 +9,8 @@
 <div class="container my-2">
     <h1>Employees List</h1>
 
-    <a th:href = "@{/employee/employee-list}" class="btn btn-danger btn-sm mb-3"> Back to Employee View </a>
+    <a th:href="@{/}" class="btn btn-primary btn-sm mb-3"> Home </a>
+    <a th:href = "@{/booking/viewBookingForm}" class="btn btn-danger btn-sm mb-3"> Book a car </a>
 
     <table border="1" class = "table table-striped table-responsive-md">
         <thead>
