--- a/src/main/resources/templates/car/car-list.html
+++ b/src/main/resources/templates/car/car-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Car-list</title>
@@ -8,7 +8,7 @@
 <body>
 <div class="container my-2">
     <h1>Cars List</h1>
-    <a th:href = "@{/car/showAddCarForm}" class="btn btn-primary btn-sm mb-3"> Add Car </a>
+    <a sec:authorize="hasAnyRole('ROLE_MANAGER', 'ROLE_EMPLOYEE')" th:href = "@{/car/showAddCarForm}" class="btn btn-primary btn-sm mb-3"> Add Car </a>
     <a th:href="@{/}" class="btn btn-primary btn-sm mb-3"> Home </a>
 <table border="1" class = "table table-striped table-responsive-md">
     <thead>
@@ -34,9 +34,9 @@
         <td th:text="${car.mileage}"></td>
         <td th:text="${car.status}"></td>
         <td th:text="${car.amount}"></td>
-    <td> <a th:href="@{/car/showCarUpdateForm/{id}(id=${car.id})}" class="btn btn-primary">Update</a>
+    <td> <a sec:authorize="isAuthenticated()" th:href="@{/car/showCarUpdateForm/{id}(id=${car.id})}" class="btn btn-primary">Update</a>
         <!--                <a th:href="@{/employee/deleteEmployee/{id}(id=${employee.id})}" class="btn btn-danger">Delete</a>-->
-        <a th:href="@{'/car/deleteCar/' + ${car.id}}" class="btn btn-danger">Delete</a>
+        <a sec:authorize="isAuthenticated()" th:href="@{'/car/deleteCar/' + ${car.id}}" class="btn btn-danger">Delete</a>
     </td>
     </tr>
     </tbody>
