--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -26,18 +26,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/client/client-list}">Clients</a>
+                    <a sec:authorize="hasAnyRole('ROLE_MANAGER', 'ROLE_EMPLOYEE')"  class="nav-link" th:href="@{/client/client-list}">Clients</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/employee/employee-list}">Employee</a>
+                    <a sec:authorize="hasRole('ROLE_MANAGER')" class="nav-link" th:href="@{/employee/employee-list}">Employee</a>
                 </li>
 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/car/car-list}">Cars</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/user/register}">Zarejestruj</a>
+                    <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{/booking/booking-list}">Booking</a>
                 </li>
                 <form sec:authorize="isAnonymous()" class="d-md-flex" th:action="@{/}" method="post" autocomplete="off">
                     <label class="visually-hidden" for="login">Login</label>
